--- a/eighfoldMusings.Rmd
+++ b/eighfoldMusings.Rmd
@@ -33,6 +33,8 @@ Make sure to comment out your code, but what role comments in RMD documents?
 
 Still figuring out this GIT stuff in RStudio.
 
+More to come.
+
 ```{r message=FALSE, warning=FALSE}
 library(tidyverse)
 ggplot(data = mpg) + 
