--- a/eighfoldMusings.Rmd
+++ b/eighfoldMusings.Rmd
@@ -36,6 +36,8 @@ More to come.
 
 Hey, should I write the GATA3 paper in RMD? Small changes are not worth committing, since a committed document is the "gold standard," the "display copy," if you like. Nonetheless, the habit of committing is important. 
 
+Why use the git interface in RStudio rather than the terminal in RStudio? Doesn't seem to add much, and it keeps me slightly further from git...
+
 ```{r message=FALSE, warning=FALSE}
 library(tidyverse)
 ggplot(data = mpg) + 
