--- a/eighfoldMusings.Rmd
+++ b/eighfoldMusings.Rmd
@@ -2,7 +2,12 @@
 title: "musings on R Markdown and how I’ll use it"
 author: "W. McDonald"
 date: "7/1/2018"
-output: html_document
+output:
+  html_document:
+    df_print: paged
+  pdf_document: default
+bibliography: bibliography.bib 
+csl: vancouver.csl
 ---
 
 ```{r setup, include=FALSE}
@@ -38,12 +43,14 @@ Hey, should I write the GATA3 paper in RMD? Small changes are not worth committi
 
 Why use the git interface in RStudio rather than the terminal in RStudio? Doesn't seem to add much, and it keeps me slightly further from git...
 
-The Mummer's Dance spielt.
+How do references work in Rmd? Here's a reference dropped in with citr[@RN3726; @RN3727]. I finally got citr installed when I realized that my R version was not the latest, and was preventing the loading of some dependent packages. Dumb, I know. 
 
-How do references work in Rmd?
+YAML specifications including **output**, **bibliography**, and ***CSL*** are important for inserting citations. 
 
 ```{r message=FALSE, warning=FALSE}
 library(tidyverse)
 ggplot(data = mpg) + 
   geom_point(mapping = aes(x = displ, y = hwy, color = class))
 ```
+
+##References:
