--- a/eighfoldMusings.Rmd
+++ b/eighfoldMusings.Rmd
@@ -53,4 +53,7 @@ ggplot(data = mpg) +
   geom_point(mapping = aes(x = displ, y = hwy, color = class))
 ```
 
+Images can also be inserted as below.
+![](IMG_0618.JPG)
+
 ##References:
