--- a/eighfoldMusings.Rmd
+++ b/eighfoldMusings.Rmd
@@ -53,6 +53,8 @@ ggplot(data = mpg) +
   geom_point(mapping = aes(x = displ, y = hwy, color = class))
 ```
 
+A little more text goes here.
+
 Images can also be inserted as below.
 ![](photos/IMG_0618.JPG)
 
