--- a/eighfoldMusings.Rmd
+++ b/eighfoldMusings.Rmd
@@ -57,7 +57,7 @@ ggplot(data = mpg) +
   geom_point(mapping = aes(x = displ, y = hwy, color = class))
 ```
 
-A little more text goes here.
+Why not make this into a page that contains useful things, like math? I should learn some LATEX(?), anyway.
 
 Images can also be inserted as below.
 ![](photos/IMG_0618.JPG)
