--- a/BrainTumorTesting.Rmd
+++ b/BrainTumorTesting.Rmd
@@ -3,10 +3,11 @@ title: "Brain Tumor Testing"
 author: "W. McDonald, MD"
 date: "7/31/2018"
 output:
+  ioslides_presentation: default
+  word_document: default
+  pdf_document: default
   html_document:
     df_print: paged
-  pdf_document: default
-  ioslides_presentation: default
 ---
 
 ```{r setup, include=FALSE}
