stated the AHL neuropath database will be the source of prevalence data

--- a/eighfoldMusings.Rmd
+++ b/eighfoldMusings.Rmd
@@ -139,6 +139,7 @@ So what recommendations do I have for trainees?
 
 ***
 #Brain Tumor Prevalence at Allina Health Laboratories
+This will be based on my neuropathology database.
 
 #Chapter 2: Essential Neuroanatomy and Neuroradiology
 
