--- a/eighfoldMusings.Rmd
+++ b/eighfoldMusings.Rmd
@@ -142,6 +142,8 @@ So what recommendations do I have for trainees?
 #Brain Tumor Prevalence in a Large Community Practice
 This will be based on my neuropathology database. R code should display a barplot of the most common diagnoses.
 
+#And Poetry... There Needs to be Poetry
+
 #Brain Tumor Testing Options: 
 Test  | Histology | NGS | CNA | Methylation
 ----  | --------- | --- | --- | ------
