Photos: do I have enough good ones? Do I need more?

--- a/eighfoldMusings.Rmd
+++ b/eighfoldMusings.Rmd
@@ -205,6 +205,7 @@ This is where my pituitary algorithm comes in.
 #Chapter 10: Basic Muscle and Nerve Pathology
 
 #Chapter 11: Basic Brain Autopsy
+Pictures would be nice. Good anatomy. 
 
 #Chapter 12: Basic Dementia Autopsy
 Is there any evidence based classification in dementia?
