--- a/eighfoldMusings.Rmd
+++ b/eighfoldMusings.Rmd
@@ -205,7 +205,7 @@ This is where my pituitary algorithm comes in.
 #Chapter 10: Basic Muscle and Nerve Pathology
 
 #Chapter 11: Basic Brain Autopsy
-Pictures would be nice. Good anatomy. 
+Pictures would be nice. Good anatomy. At least enough to appreciate the basics discussed at brain cuttin. A YouTube that goes over my usual brief introduction to neuroanatomy of novices would be very efficient.
 
 #Chapter 12: Basic Dementia Autopsy
 Is there any evidence based classification in dementia?
