show good and not good smears

--- a/eighfoldMusings.Rmd
+++ b/eighfoldMusings.Rmd
@@ -211,7 +211,7 @@ Pictures would be nice. Good anatomy. At least enough to appreciate the basics d
 Is there any evidence based classification in dementia?
 
 #Chapter 13: Diagnostic Neuropathology, A Pragmatic Approach
-	Role of cytologic preparations in intra-operative diagnosis
+	Role of cytologic preparations in intra-operative diagnosis (show good smears and lousy smears)
 	Role of neuro-imaging in diagnostic neuropathology
 
 #Chapter 14: Ependymoma
