a word on methylation profiling

--- a/eighfoldMusings.Rmd
+++ b/eighfoldMusings.Rmd
@@ -222,6 +222,8 @@ The next generation sequencing evolution of these tumors provides clarity.
 
 #Controversy: Treatment following gross total resection
 
+#Chapter 15: Methylation Profiling Penetrates North America
+
 
 Resources provided by this work:
 Text with high-quality images
