methylation profiling note

--- a/eighfoldMusings.Rmd
+++ b/eighfoldMusings.Rmd
@@ -223,7 +223,7 @@ The next generation sequencing evolution of these tumors provides clarity.
 #Controversy: Treatment following gross total resection
 
 #Chapter 15: Methylation Profiling Penetrates North America
-
+MD Anderson is bringing it in for "copy number analysis"... per Jason Huse at the CAP diffuse glioma meeting in September 2018. Others are acquiring it as well. The Europeans remain far ahead as of 9/22/18.  
 
 Resources provided by this work:
 Text with high-quality images
